fix/swagger_category
