# controllers/categories/getCategories.js
@@ -1,34 +1,35 @@
-const {Transaction} = require("../../models")
+const { Transaction } = require('../../models');
 
 const getCategories = async (req, res) => {
-  const {_id} = req.user;
+  const { _id } = req.user;
   const result = await Transaction.aggregate([
-  {
-    '$match': {
-      'owner': _id, 
-      'type': 'income'
-    }
-  }, {
-    '$group': {
-      '_id': {
-        'month': {
-          '$month': '$date'
-        }, 
-        'year': {
-          '$year': '$date'
-        }
-      }, 
-      'totalPrice': {
-        '$sum': '$sum'
-      }, 
-      'category': {
-        '$addToSet': '$category'
-      }
-    }
-  }
-])
+    {
+      $match: {
+        owner: _id,
+        type: 'expense',
+      },
+    },
+    {
+      $group: {
+        _id: {
+          month: {
+            $month: '$date',
+          },
+          year: {
+            $year: '$date',
+          },
+        },
+        totalPrice: {
+          $sum: '$sum',
+        },
+        category: {
+          $addToSet: '$category',
+        },
+      },
+    },
+  ]);
 
-res.status(200).json(result);
+  res.status(200).json(result);
 };
 
 module.exports = getCategories;
