# routes/api/categories.js
@@ -1,10 +1,9 @@
 const express = require('express');
-
+// const { ctrlWrapper } = require('../../helpers');
 const getCategories = require('../../controllers/categories/getCategories');
-const auth = require('../../middlewares/auth')
+const auth = require('../../middlewares/auth');
 
 const router = express.Router();
-
 
 router.get('/', auth, getCategories);
 
